Bug 1449828 - Don't calculate selection rect if unnecessary. r=jfkthame